--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             </div>
             <div class="header-secondpart">
                 <ul class="menu-list">
-                    <li><a>BANK</a></li>
-                    <li><a>BUSINESS</a></li>
-                    <li><a>INVESTMENTS</a></li>
-                    <li><a>INSURANCE</a></li>
-                    <li><a>MOBILE</a></li>
-                    <li><a>TRIPS</a></li>
-                    <li><a>ENTERTAINMENT</a></li>
+                    <li>BANK</li>
+                    <li>BUSINESS</li>
+                    <li>INVESTMENTS</li>
+                    <li>INSURANCE</li>
+                    <li>MOBILE</li>
+                    <li>TRIPS</li>
+                    <li>ENTERTAINMENT</li>
                 </ul>
             </div>
             <div class="header-thirdpart">
